--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/create-react-class": "^15.6.3",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.7",
     "@types/react": "16.9.10",
     "@types/react-dom": "16.9.2",
+    "@typescript-eslint/eslint-plugin": "^2.5.0",
+    "@typescript-eslint/parser": "^2.5.0",
+    "create-react-class": "^15.6.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
